<resources>
    <string name="action_settings">Waiting for GPS&#8230;</string>
    <string name="info">Waiting for GPS&#8230;</string>
    <string name="app_name">Motion</string>
    <string name="info_blank" translatable="false"></string>
    <string name="info_wait">Please Wait&#8230;</string>
    <string name="about_menu_name">About</string>
    <string name="about_message">Map my Motion application for Robotics.\n\nVisit http://mapmymotion.com for more info.</string>
    <string name="unit_km">Kilometer</string>
    <string name="unit_miles">Miles</string>
    <string name="setting_unit">Measurement Unit</string>
    <string name="localhost">localhost</string>
    <string name="hostip">96.31.86.129</string>
    <string name="pace">00:00</string>
    <string name="duration">00:00:00</string>
    <string name="distance">0</string>
    <string name="preferences">Settings</string>
    <string name="activities">ActivitiesList</string>
    <string name="start_activity">Start</string>
    <string name="intervals">          Intervals</string>
    <string name="pacetext">Pace</string>
    <string name="waitactivities">Wait for Activities&#8230;</string>
    <string name="activitytype">Type</string>
    <string name="activitydate">Date</string>
    <string name="activitydistance">Distance</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="emailaddress">Email </string>
    <string name="password">Password</string>
    <string name="newuser">New User</string>
    <string name="fullname">Name</string>
    <string name="addfriends">Add Friends</string>
    <string name="goback">Back</string>
    <string name="invite">Invite</string>
    <string name="acceptfriend">Accept Friend</string>
    <string name="showfriend">Show Friend</string>
    <string name="ignorefriend">Ignore Friend</string>
    <string name="hidefriend">Hide Friend</string>
    <string name="uninvite">Uninvite</string>
    <string name="showmap">Show Map</string>
    <string name="waitforintervals">Wait for Intervals&#8230;</string>
    <string name="waitforfriends">Loading Friends&#8230;</string>
    <string name="refreshlist">Refresh List</string>
    <string name="activitydetail">Activity Detail</string>
    <string name="loadingfriends">Loading Friends</string>
    <string name="newusermessage">If your email is already entered then press Cancel and go to Menu-&gt;Preference-&gt;Email address enter your email address.  Your Member Id will be automatically entered for you.</string>
    <string name="messages">Messages</string>
    <string name="activity">Activity</string>
    <string name="mapit">Map It</string>
    <string name="friends">Friends</string>
    <string name="history">History</string>
    <string name="activitiestitle">Activities</string>
    <string name="loading">Loading</string>
    <string name="login">Log In</string>
    <string name="username">User Name</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="mapmymotiondata">Map my Motion Data</string>
    <string name="autostart">Auto Start at </string>
    <string name="loadingactivities">Loading Activities</string>
    <string name="showhidefriend">Select friend  to Show/Hide</string>
    <string name="friendtoaccept">Select Friend to Accept</string>
    <string name="friendtoinvite">Select Friend to Invite</string>
    <string name="distanceis">Distance is </string>
    <string name="speedis">Speed is </string>
    <string name="averagespeed">Average Speed is </string>
    <string name="durationis">Duration</string>
    <string name="intervalis">Interval</string>
    <string name="pickupspeed">Pick up your Speed</string>
    <string name="mmmnotification">Map my Motion Notification</string>
    <string name="mapmymotion">Map my Motion</string>
    <string name="activitystartedat">Activity Started at</string>
    <string name="accountcategorytitle">Account Information</string>
    <string name="accountcategorysubtitle">Enter Account Information</string>
    <string name="loginsettingstitle">Account Login</string>
    <string name="loginsettingsummary">Used to link your email address with your system generated member ID.  Allows you to transfer data you transferred to the server with other users or to another device.  There is no requirement that you enter this as long as you are working on this device only.  All information transmitted to and from your device is encrytped with AES 256 encryption.</string>
    <string name="loginsettingdialogtitle">Email Address</string>
    <string name="loginsettingdialogmessage">Enter email address</string>
    <string name="changepasswordtitle">Change Password</string>
    <string name="changepasswordsummary">Check box to change password at Start of application.  You will not be able to view the web application unless you know this password.</string>
    <string name="changepasswordmessage">You will not be able to view your information at <a>http://mapmymotion.com</a> unless you know this password.</string>
    <string name="loginmemberidtitle">Member ID</string>
    <string name="loginmemberiddialogtitle">Member ID</string>
    <string name="loginmemberidsummary">Your member id is system generated and is the id that is used to store information on our servers.  When you input your email address we will send you an email with the id.  You lose the id and you lose any information that is stored on our servers.  It may be there but we won\'t be able to trace it to you.</string>
    <string name="loginmemberiddialogmessage">Enter Member ID</string>
    <string name="uomtitle">Measurement Units</string>
    <string name="uomsummary">Enter Default Measurement Units</string>
    <string name="user_options_title">Activity Preferences</string>
    <string name="activitytypetitle">Activity Type</string>
    <string name="activitytypesummary">Select Activity Type</string>
    <string name="autostarttitle">Auto Start</string>
    <string name="autostartsummary">Enter Automatic Start Speed</string>
    <string name="autostoptitle">Auto Stop</string>
    <string name="autostopsummary">Enter Automatic Stop Speed</string>
    <string name="showonscreentitle">Show on Screen</string>
    <string name="showonscreensummary">Select data to display on screen</string>
    <string name="current_speedtitle">Enable Current Speed</string>
    <string name="current_speedsummary">Enable or disable Current Speed</string>
    <string name="avg_speedtitle">Enable Average Speed</string>
    <string name="avg_speedsummary">Enable or disable Average Speed</string>
    <string name="avg_pacetitle">Enable Pace</string>
    <string name="avg_pacesummary">Enable or disable Pace</string>
    <string name="distancetitle">Enable Distance</string>
    <string name="distancesummary">Enable or disable Distance</string>
    <string name="durationtitle">Enable Time Elasped</string>
    <string name="durationsummary">Enable or disable Duration</string>
    <string name="intervaltitle">Enable Interval</string>
    <string name="intervalsummary">Enable or disable Intervals</string>
    <string name="notification_options_title">Notifications</string>
    <string name="notifications_screentitle">Notifications</string>
    <string name="notifications_screensummary">Notification preferences on next page</string>
    <string name="notifications_title">Enable Notifications</string>
    <string name="notifications_summary">Enable or disable Notifications</string>
    <string name="notificationdistance_interval_title">Notifications Distance Interval</string>
    <string name="notificationdistance_interval_summary">Distance between notifications</string>
    <string name="minpace_title">Minimum Pace</string>
    <string name="minpace_summary">Define Minimum Pace</string>
    <string name="voice_notifications_title">Voice Notifications</string>
    <string name="voice_notifications_summary">Voice notifications on next page</string>
    <string name="current_speed_cue_title">Enable Current Speed</string>
    <string name="current_speed_cue_summary">Current Speed Notification</string>
    <string name="avg_speed_cue_title">Enable Average Speed</string>
    <string name="avg_speed_cue_summary">Average Speed Notification</string>
    <string name="avg_pace_cue_title">Enable Pace</string>
    <string name="avg_pace_cue_summary">Pace Notification</string>
    <string name="distance_cue_title">Enable Distance</string>
    <string name="distance_cue_summary">Distance Notification</string>
    <string name="duration_cue_title">Enable Time Elapsed</string>
    <string name="duration_cue_summary">Duration Notification</string>
    <string name="current_time_cue_title">Enable Current Time</string>
    <string name="current_time_cue_summary">Current Time Notification</string>
    <string name="altitude_cue_title">Enable Altitude</string>
    <string name="altitude_cue_summary">Altitude Notification</string>
    <string name="altitude_title">Enable Altitude</string>
    <string name="altitude_summary">Altitude Notification</string>
    <string name="update_options_title">Updates</string>
    <string name="perform_updates_title">Enable updates</string>
    <string name="perform_updates_summary">Enable or disable data updates</string>
    <string name="updates_interval_title">Updates interval</string>
    <string name="updates_interval_summary">Define how often updates will be performed</string>
    <string name="notification_interval_title">Notifications interval</string>
    <string name="notification_interval_summary">Define how often notifications will be performed</string>
    <string name="connectedtoserver">Connected to server </string>
    <string name="noconnectiontoserver">Can not establish connection to </string>
    <string name="waitforacceptance">Awaiting Acceptance</string>
    <string name="activefriends">Active Friends</string>
    <string name="loadinggeopoints">Loading Geo Points</string>
    <string name="faq">FAQ</string>
    <string name="list">List</string>
    <string name="waitforconfirmation">Wait for Confirmation before moving from here</string>
    <string name="invalidmemberid">Contact Support at support@mapmymotion.com.  You may have entered an invalid email address or lost communications</string>
    <string name="networknotavailable">Network not Available</string>
    <string name="invalidemail">Invalid Email Address</string>
    <string name="exitapp">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="resume">Resume</string>
    <string name="resumeactivity">Resume Activity</string>
    <string name="newactivity">New Activity</string>
    <string name="message">Message</string>
    <string name="activitymap">Activity Map</string>
    <string name="retrievemapactivity">Retrieving Map for Activity ID&#8230;Please Wait</string>
    <string name="unabletoretrievegeo">Unable to Retrieve Map GeoPoints</string>
    <string name="unabletoretrievefriends">Unable to Retrieve Friends</string>
    <string name="includefriends">Include Friends</string>
    <string name="quit">Quit</string>
    <string name="save">Save</string>
    <string name="addStop">Add Stop</string>
    <string name="chat">Chat</string>
    <string name="information">Information</string>
    <string name="loads">Loads</string>
    <string name="settings">Settings</string>
    <string name="pause">Pause</string>
    <string name="resume_last">Resume Last Activity</string>
    <string name="dateLabel">Date: </string>
    <string name="weight">Weight:</string>
    <string name="personalInfoTitle">Personal Information</string>
    <string name="weightGoalTitle">Weight Goal</string>
    <string name="weightGoalSummary">Enter Weight Goal</string>
    <string name="paceGoalTitle">Pace Goal</string>
    <string name="paceGoalSummary">Enter Pace Goal</string>
</resources>