<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/weightLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_corner_input"
    android:visibility="visible" >

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp"
        android:text="@string/dateLabel"
        android:textSize="18sp" />

    <com.mapmymotion.utilities.DateEditText
        android:id="@+id/dateWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dateLabel"
        android:layout_marginBottom="8dp"
        android:layout_toRightOf="@+id/dateLabel"
        android:hint="YYYY/MM/DD"
        android:imeOptions="actionNext"
        android:inputType="date"
        android:layout_marginLeft="50dp"
        android:nextFocusForward="@+id/weightAmount"
        android:textSize="@dimen/text_size"
        android:visibility="visible" />

    <TextView
        android:id="@+id/weightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dateLabel"
        android:layout_margin="10dp"
        android:minWidth="80dp"
        android:text="@string/weight"
        android:textSize="18sp" />

    <com.mapmymotion.utilities.EditTextWithFocusChanged
        android:id="@+id/weightAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/weightLabel"
        android:layout_margin="10dp"
        android:layout_below="@+id/dateWeight"
        android:layout_toRightOf="@+id/weightLabel"
        android:enabled="true"
        android:hint="@string/distance"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:minWidth="80dp"
        android:nextFocusForward="@+id/saveWeight"
        android:textSize="18sp" />

    <Button
        android:id="@+id/saveWeight"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/weightLabel"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:background="@color/offyellow"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:text="@string/save"
        android:textSize="18sp" />

</RelativeLayout>